--- a/index.html
+++ b/index.html
@@ -123,7 +123,9 @@
 
     <section>
       <h2>Exemplos</h2>
-
+      <a href="https://github.com/secultce/plugin-BigSheetImporter/commits/main/">
+        <img src="img/ex3.png">
+      </a>
     </section>
 
     <section>
