--- a/gep.html
+++ b/gep.html
@@ -133,12 +133,12 @@
           <li>OWASP Dependency-Check</li>
           <li>npm audit</li>
           <li>pip-audit</li>
+          <li><a href="https://github.com/cristianovisk/open_source_insights_api">Open Source Insights API</a></li>
         </ul>
       </section>
       <section>
         <div>
           <img src="/img/gep/ex03.png" alt="Imagem 1">
-
         </div>
       </section>
     </section>
@@ -148,8 +148,8 @@
       <a style="font-size: 1rem; line-height: 1rem; display: block;color: inherit;text-align: left;" href="https://owasp.org/Top10/en/A06_2021-Vulnerable_and_Outdated_Components/">
         A06 Vulnerable and Outdated Components - OWASP Top 10:2021,<br><b>&lt;https://owasp.org/Top10/en/A06_2021-Vulnerable_and_Outdated_Components/&gt;</b>
       </a>
-      <a style="font-size: 1rem; line-height: 1rem; display: block;color: inherit;text-align: left;" href="https://owasp.org/Top10/en/A06_2021-Vulnerable_and_Outdated_Components/">
-        A06 Vulnerable and Outdated Components - OWASP Top 10:2021,<br><b>&lt;https://owasp.org/Top10/en/A06_2021-Vulnerable_and_Outdated_Components/&gt;</b>
+      <a style="font-size: 1rem; line-height: 1rem; display: block;color: inherit;text-align: left;" href="https://www.linkedin.com/in/cristiano-henrique-santos/">
+        Cristiano Santos,<b>&lt;https://www.linkedin.com/in/cristiano-henrique-santos/&gt;</b>
       </a>
     </section>
 
